# CoreGL

./: .gitignore  CMakeLists.txt  CoreGL.py  CoreGL.pyproj  PurityGL.py  README.md  TestCoreGL.c  TestPurityGL.c  build
Templates/: OpenGL.c.template  OpenGL.c.windows  OpenGL.h.windows  OpenGLAPI.h
